--- a/app/src/main/res/layout/activity_update_marks.xml
+++ b/app/src/main/res/layout/activity_update_marks.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/class_title"
-            android:text="Classes"
+            android:text="Update Marks"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:textSize="40sp" />
@@ -54,6 +54,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/roll_no"
         android:hint="Enter roll no"
+        android:textColorHint="@color/abc_background_cache_hint_selector_material_dark"
         android:textColor="@color/primary_dark_material_dark"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentStart="true"
@@ -112,6 +113,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/attn"
+        android:hint="Enter Marks"
+        android:textColorHint="@color/abc_background_cache_hint_selector_material_dark"
         android:textColor="@color/primary_dark_material_dark"
         android:layout_below="@+id/radioGroup"
         android:layout_alignParentStart="true"
