--- a/app/src/main/res/layout/activity_stu_info.xml
+++ b/app/src/main/res/layout/activity_stu_info.xml
@@ -59,23 +59,23 @@
                     />
 
                 <TextView
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Email:"
                     android:textColor="@color/background_material_dark"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:layout_marginStart="20dp"
                     android:id="@+id/email"
                     />
 
                 <TextView
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Mobile:"
                     android:textColor="@color/background_material_dark"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:layout_marginStart="20dp"
                     android:id="@+id/mobile"
                     />
@@ -407,7 +407,10 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Enter data here !! "/>
+                        android:hint="Enter data here !! "
+                        android:id="@+id/ed"
+                        android:textColor="@color/primary_material_dark"
+                        android:textColorHint="@color/abc_background_cache_hint_selector_material_dark"/>
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
